--- a/06_sepsis_final_write_up.ipynb
+++ b/06_sepsis_final_write_up.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cffba10a-7458-41aa-a5df-7c4942d6adaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''\n",
+    "<script>\n",
+    "code_show=true;\n",
+    "function code_toggle() {\n",
+    "    if (code_show){\n",
+    "        $('div.input').hide();\n",
+    "    } else {\n",
+    "        $('div.input').show();\n",
+    "    }\n",
+    "    code_show = !code_show\n",
+    "}\n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>\n",
+    "''')   "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca456f53-57c3-401f-896d-5c09020ba618",
    "metadata": {},
@@ -388,7 +413,6 @@
     }
    ],
    "source": [
-    "#plt.figure(figsize = (6,6))\n",
     "g = sns.FacetGrid(df1, col = 'SepsisLabel', hue = 'Sex', sharey = False, height = 4, aspect = 1)\n",
     "g.map(sns.histplot, 'Age', bins = 10, alpha = 0.35)\n",
     "g.add_legend(title='Sex')"
@@ -445,7 +469,6 @@
     "df1 = percent_missing_sorted(df)\n",
     "plt.figure(figsize = (10,6))\n",
     "ax = sns.barplot(df1, x = 'feature', y = 'percent', color= 'grey' )\n",
-    "#plt.xticks(rotation = 45)\n",
     "ax.set_xticklabels(df1.feature, rotation = 90)\n",
     "plt.show()"
    ]
@@ -480,7 +503,6 @@
     "axs0 = fig.add_subplot(2,2,1)\n",
     "sns.histplot(df1, x='Hour', label='WBC', ax = axs0)\n",
     "sns.histplot(df2, x = 'Hour', label = 'Hgb', ax = axs0)\n",
-    "#sns.histplot(df3, x = 'Hour', label = 'SBP')\n",
     "sns.histplot(df4, x = 'Hour', label = 'Fibrinogen', ax = axs0)\n",
     "plt.legend()\n",
     "plt.xlim(0, 36)\n",
