--- a/06_sepsis_final_write_up.ipynb
+++ b/06_sepsis_final_write_up.ipynb
@@ -1,31 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cffba10a-7458-41aa-a5df-7c4942d6adaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML('''\n",
-    "<script>\n",
-    "code_show=true;\n",
-    "function code_toggle() {\n",
-    "    if (code_show){\n",
-    "        $('div.input').hide();\n",
-    "    } else {\n",
-    "        $('div.input').show();\n",
-    "    }\n",
-    "    code_show = !code_show\n",
-    "}\n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>\n",
-    "''')   "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ca456f53-57c3-401f-896d-5c09020ba618",
    "metadata": {},
@@ -387,17 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "277913c8-4b42-4e92-a445-5b9f954393de",
+   "execution_count": 29,
+   "id": "e4aeed8d-e090-44f1-a1bf-5589529c1dc3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f8135d65f90>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fd2872058d0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
