--- a/06_sepsis_final_write_up.ipynb
+++ b/06_sepsis_final_write_up.ipynb
@@ -553,8 +553,9 @@
     }
    ],
    "source": [
+    "# custom function\n",
     "mpl.style.use(['ggplot'])\n",
-    "feature_lineplots_1(complete_cases, 8,4)"
+    "feature_lineplots_1(8,4)"
    ]
   },
   {
