--- a/00_sepsis_report.ipynb
+++ b/00_sepsis_report.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "773127aa-7402-4220-88da-1c5bea1ceeb0",
+   "id": "62117c3f-87b7-4692-b501-ef7c3210cc1a",
    "metadata": {},
    "source": [
-    "# Early Prediction of Sepsis with XGBoost\n",
+    "# Machine Learning for Predictive Analytics: Early Prediction of Sepsis\n",
     "**Table of Contents**\n",
     "<ol>\n",
     "<li><a href=\"#Introduction\">Introduction</a></li>\n",
